--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -1,25 +1,31 @@
 .root {
-    main-color: rgb(237, 255, 242);       /* Create a looked-up color called "main-color" within root. */
+    main-color: #d2aea4;       /* Create a looked-up color called "main-color" within root. */
     -fx-background-color: main-color;
 }
 
 .text-field {
-    -fx-background-color: #d9ffe2;
-    -fx-font: 20px "Arial";
+    -fx-background-color: #dfc6c0;
+    -fx-font: 18px "Trebuchet MS";
+}
+
+.text-field .prompt-text {
+    -fx-fill: gray;
+    -fx-font-style: italic;
 }
 
 .button {
-    -fx-background-color: mediumspringgreen;
-    -fx-font: italic bold 16px "Arial";
+    -fx-background-color: #b27463;
+    -fx-font: italic bold 16px "Trebuchet MS";
+    -fx-text-fill: #ffffff;
 }
 
 .button:hover {
-    -fx-background-color:cyan;
+    -fx-background-color: #513128;
     -fx-font-size: 18px;
 }
 
 .button:pressed {
-    -fx-background-color:orange;
+    -fx-background-color: #2b1a15;
     -fx-font-size: 20px;
 }
 
@@ -34,8 +40,9 @@
 }
 
 .scroll-bar .thumb {
-    -fx-background-color: #ff9cb4;
+    -fx-background-color: #2b1a15;
     -fx-background-radius: 1em;
+    fx-min-height: 20px;
 }
 
 /* Hides the increment and decrement buttons. */
