Add More Error Handling
Error handling for invalid dates for events added. Easier management of tasks with constant indexing.

--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -6,6 +6,7 @@
 .text-field {
     -fx-background-color: #dfc6c0;
     -fx-font: 18px "Trebuchet MS";
+    -fx-highlight-fill: #bf997e;
 }
 
 .text-field .prompt-text {
